# blob_lens

./: .env.example  .gitignore  API_DOCS.md  CLAUDE.md  Cargo.toml  DASHBOARD_PLAN.md  Dockerfile  FEATURE_PROGRESS.md  GAP_COVERAGE.md  Plan.md  README.md  SHIPPED.md  STATUS.md  TODO.md  check-blobs.sh  check_blobs.py  docker-compose.yml  package.json  pnpm-lock.yaml  ui-reference.md  vercel.json
.claude/: settings.json
.github/workflows/: deploy-production.yml
apps/api/: Cargo.toml  Dockerfile  seed_rollup_registry.sql
apps/api/public/: style.css
apps/api/src/: api.rs  lib.rs  main.rs  rollup_registry.rs  services.rs
apps/api/src/db/: mod.rs  models.rs
apps/api/src/services/: ai_analyst.rs  alerts.rs  beacon.rs  blob_parser.rs  eth_distribution.rs  ofac_sync.rs  rwa_indexer.rs  security_metrics.rs  whale_indexer.rs
apps/api_v1/: Cargo.toml  backfill_unknown_rollups.sql  check-blobs-rust.sh
apps/api_v1/public/: app.js
apps/api_v1/src/: api.rs  api_auth.rs  main.rs  services.rs  wallet_api.rs
apps/api_v1/src/db/: mod.rs  models.rs
apps/api_v1/src/services/: l1_cost_tracker.rs  security_metrics.rs
apps/exex-node/: Cargo.toml  Dockerfile
apps/exex-node/src/: clickhouse_client.rs  exex.rs  main.rs
apps/indexer/: .env.example  Cargo.toml  Dockerfile
apps/indexer/infra/: clickhouse-compose.yml  clickhouse-config.xml  deploy-ba-data.sh  local-clickhouse.yml
apps/indexer/src/: clickhouse_client.rs  exex.rs  lib.rs  main.rs  rollup.rs
apps/web/: .mcp.json  DESIGN_REFERENCE.md  Dockerfile  package.json
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/src/app/address/[addr]/: page.tsx
apps/web/src/app/api/alerts/: route.ts
apps/web/src/app/api/alerts/check/: route.ts
apps/web/src/app/api/alerts/worker/: route.ts
apps/web/src/app/api/blob-sidecar/: route.ts
apps/web/src/app/api/blobs/: route.ts
apps/web/src/app/api/blobs/stream/: route.ts
apps/web/src/app/api/blocks/: route.ts
apps/web/src/app/api/blocks/stream/: route.ts
apps/web/src/app/api/eth-price/: route.ts
apps/web/src/app/api/health/: route.ts
apps/web/src/app/api/l1-fee/: route.ts
apps/web/src/app/api/leaderboard/: route.ts
apps/web/src/app/api/market/: route.ts
apps/web/src/app/api/mev/: route.ts
apps/web/src/app/api/rollup-fee/: route.ts
apps/web/src/app/api/rollup/[id]/: route.ts
apps/web/src/app/api/wallet-360/: route.ts
apps/web/src/app/api/wallet-360/admin/: route.ts
apps/web/src/app/api/whale-watch/: route.ts
apps/web/src/app/block/[number]/: page.tsx
apps/web/src/app/branding/: page.tsx
apps/web/src/app/compliance/ofac/: page.tsx
apps/web/src/app/da-insights/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/eth-liquidity/: page.tsx
apps/web/src/app/explore/: page.tsx
apps/web/src/app/landing/: page.tsx
apps/web/src/app/leaderboard/: LeaderboardClient.tsx  page.tsx
apps/web/src/app/live/: LiveStats.tsx  page.tsx
apps/web/src/app/market/: MarketLiveWrapper.tsx  page.tsx
apps/web/src/app/mev/: MevClient.tsx  page.tsx
apps/web/src/app/previews/: page.tsx
apps/web/src/app/research/: page.tsx
apps/web/src/app/research/ai-insights/: page.tsx
apps/web/src/app/research/security/: page.tsx
apps/web/src/app/rollup/[id]/: page.tsx
apps/web/src/app/rwa/: page.tsx
apps/web/src/app/tx/[hash]/: page.tsx
apps/web/src/app/unknown/: page.tsx
apps/web/src/app/wallet-360/: Wallet360Client.tsx  page.tsx
apps/web/src/app/whale-watch/: page.tsx
apps/web/src/components/charts/: BlobFeeGauge.tsx  BlobFeeLineChart.tsx  BlobFeeLineChartSelector.tsx  BlobSparkline.tsx  BlobUtilizationChart.tsx  BlobsPerBlockChart.tsx  CongestionForecast.tsx  CostHeatmap.tsx  CumulativeBlobGrowth.tsx  DACostCharts.tsx  ETHDistributionDonut.tsx  ETHLiquidityTrendChart.tsx  EfficiencyComparisonTable.tsx  EfficiencyScatterplot.tsx  FeeBlobScatter.tsx  FeePercentilesChart.tsx  HistoricalBlobCostChart.tsx  HistoricalBlobVolumeChart.tsx  L1vsBlobFeeChart.tsx  MarketRegimeTimeline.tsx  PackingHistogram.tsx  RegimeHeatmap.tsx  RollupActivityHeatmap.tsx  RollupActivityLineChart.tsx  RollupMetricLineChart.tsx  RollupNetworkGraph.tsx  RollupNetworkGraphD3.tsx  RollupShareDonut.tsx  RollupVolumeAreaChart.tsx  SlotUtilizationChart.tsx  StakingBreakdownChart.tsx  SubmissionTimingHeatmap.tsx  TopWhalesBarChart.tsx  TransactionTypesChart.tsx  WhaleCategoryDonut.tsx  WhaleHistoryLineChart.tsx
apps/web/src/components/landing/: EcosystemMapPreview.tsx  LandingClient.tsx
apps/web/src/components/shared/: AppHeader.tsx  AppNavbar.tsx  AppShell.tsx  AppSidebar.tsx  BlobDataViewer.tsx  BlockFeed.tsx  ChartCardFooter.tsx  CopySectionLink.tsx  DashboardScrollHandler.tsx  EfficiencyLeaderboardMini.tsx  ExplorerSearch.tsx  FeeActionCard.tsx  FloatingNav.tsx  Footer.tsx  InfoTooltip.tsx  L1CostComparisonTable.tsx  LiveBlobFeed.tsx  MarketPulsePanel.tsx  MetricCard.tsx  NetworkInsightCards.tsx  PageHeader.tsx  RegimeAlertPanel.tsx  RegimeBadge.tsx  RollupBadge.tsx  RollupShareCard.tsx  RollupTxTable.tsx  Sidebar.tsx  StatCard.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TimeRangePicker.tsx  TopBar.tsx  UnknownSendersSection.tsx
apps/web/src/components/tables/: BlobLeaderboardTable.tsx
apps/web/src/components/ui/: banner.tsx  card.tsx  sidebar.tsx  spotlight-new.tsx  tabs.tsx  tooltip.tsx
apps/web/src/lib/: alertsDb.ts  chartTheme.ts  clickhouse.ts  db.ts  echarts-theme.ts  ethPrice.ts  l1Fee.ts  queries.ts  use-scroll.ts  useEthPrice.ts  useSectionObserver.ts  utils.ts
apps/web/src/types/: index.ts
docs/: DEVCON_APPLICATION.md  PRODUCTION_DEPLOYMENT.md
ops/nginx/: blob-lens.conf
ops/pm2/: ecosystem.config.cjs
public/: index.html
reth-primitives-traits-0.3.1/: .cargo_vcs_info.json  Cargo.toml
src/: api.rs  main.rs  rollup_registry.rs  services.rs
src/services/: blob_parser.rs
