[package]
name = "blob_lens"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.1", features = ["full", "providers", "pubsub", "rpc-types-eth"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6" # For easy error handling
serde_json = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
futures-util = "0.3" # For stream processing
dotenvy = "0.15"