[package]
name = "blob_lens"
version = "0.2.0"
edition = "2021"

[dependencies]
# Ethereum & RPC (using stable v0.4 instead of v0.5 which has unstable features)
alloy = { version = "0.4", features = ["full", "providers", "pubsub", "rpc-types-eth"] }
alloy-primitives = { version = "0.7", features = ["serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3.30"

# Error handling
eyre = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SSL/TLS
openssl = { version = "0.10", features = ["vendored"] }

# Environment
dotenvy = "0.15"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "json", "chrono"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Validation & parsing
thiserror = "1.0"
anyhow = "1.0"

# Performance
parking_lot = "0.12"

# Pin home to avoid edition 2024 requirement
home = "<0.5.12"