[package]
name = "blob_lens"
version = "0.2.0"
edition = "2021"
default-run = "blob_lens"

[dependencies]
# Ethereum & RPC (using stable v0.4 instead of v0.5 which has unstable features)
alloy = { version = "0.4", features = ["full", "providers", "pubsub", "rpc-types-eth"] }
alloy-primitives = { version = "0.7", features = ["serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3.30"

# Error handling
eyre = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SSL/TLS
openssl = { version = "0.10", features = ["vendored"] }

# Environment
dotenvy = "0.15"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "json", "chrono"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Validation & parsing
thiserror = "1.0"
anyhow = "1.0"

# Performance
parking_lot = "0.12"

# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "fs", "cors"] }

# HTTP client for Beacon API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Cryptography for KZG versioned hash computation
sha2 = "0.10"

# Pin home to avoid edition 2024 requirement
home = "<0.5.12"

# ClickHouse (wallet API)
clickhouse = { version = "0.13", features = ["lz4"] }