[package]
name = "blob-indexer"
version = "0.1.0"
edition = "2021"

# Only the backfill binary lives here.
# The ExEx node (Reth dependency) will be a separate crate: apps/exex-node/
[[bin]]
name = "backfill"
path = "src/bin/backfill.rs"

[dependencies]
# ClickHouse HTTP client
clickhouse = { version = "0.13", features = ["lz4"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP (JSON-RPC calls to Reth)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
eyre    = "0.6"
dotenvy = "0.15"
